# duplicate

./: .gitignore  README.md  meson.build
data/: com.paysonwallach.duplicate.contract.in.in  duplicate.contract  meson.build
po/: POTFILES  com.paysonwallach.duplicate.pot  en_US.po  meson.build
po/extra/: POTFILES  en_US.po  extra.pot  meson.build
src/: Application.vala  Duplicator.vala  Resources.vala  main.vala
